--- a/hugo.toml
+++ b/hugo.toml
@@ -76,7 +76,7 @@ ignoreErrors = ["additional-script-loading-error"] # ignore error of loading add
   # You can take a look at layouts/index.html for more information.
   description = "Minimal devblog about the Uniform Lima project."
   mainSections = ['posts']
-  toc = true # set to false to disable table of contents 'globally'
+  toc = false # set to false to disable table of contents 'globally'
   tocOpen = false # set to true to open table of contents by default
   goToTop = true # set to false to disable 'go to top' button
   additionalScripts = ['js/custom.js', 'js/custom-2.js']
@@ -94,9 +94,9 @@ ignoreErrors = ["additional-script-loading-error"] # ignore error of loading add
 [Languages.en-gb.params.author]
   avatar = "avatar.jpg" # put the file in assets folder; also ensure that image has same height and width
   # Note: image is not rendered if the resource(avatar image) is not found. No error is displayed.
-  intro = "This should be the author intro.."
+  intro = "A minimalist devblog about project Uniform Lima."
   name = "Darthun"
-  description = "Mo's face enthusiast and game designer extraordinaire."
+  description = "by Darthun : Meme enthusiast and gamedev extraordinaire."
 
 # Allow to override webmanifest options
 [Languages.en-gb.params.webmanifest]
