--- a/hugo.toml
+++ b/hugo.toml
@@ -5,6 +5,9 @@ theme = 'hugo-blog-awesome'
 ###
 # This defines how dates are formatted
 defaultContentLanguage = "en-gb"
+
+
+
 # Enable emojis globally
 enableEmoji = true
 ignoreErrors = ["additional-script-loading-error"] # ignore error of loading additional scripts.
@@ -199,3 +202,7 @@ url = "https://steamcommunity.com/id/darthun/"
 [[params.socialIcons]]
 name = "youtube"
 url = "https://www.youtube.com/@julienl3957"
+
+[module]
+  [[module.imports]]
+    path = "github.com/hugo-sid/hugo-blog-awesome"
