--- a/hugo.toml
+++ b/hugo.toml
@@ -2,6 +2,7 @@ baseURL = 'https://darthun.github.io/ULBlog/'
 languageCode = 'en-us'
 title = 'Operation Uniform Lima'
 theme = 'hugo-blog-awesome'
+canonifyURLs = true
 ###
 # This defines how dates are formatted
 defaultContentLanguage = "en-gb"
