--- a/hugo.toml
+++ b/hugo.toml
@@ -204,3 +204,9 @@ url = "https://steamcommunity.com/id/darthun/"
 name = "youtube"
 url = "https://www.youtube.com/@julienl3957"
 
+[module]
+  [[module.imports]]
+    path = 'github.com/hugomods/images'
+    disable = false
+
+
