--- a/hugo.toml
+++ b/hugo.toml
@@ -2,7 +2,7 @@ baseURL = '//darthun.github.io/ULBlog/'
 languageCode = 'en-us'
 title = 'Operation Uniform Lima'
 theme = 'hugo-blog-awesome'
-canonifyURLs = true
+#canonifyURLs = true
 ###
 # This defines how dates are formatted
 defaultContentLanguage = "en-gb"
@@ -204,9 +204,9 @@ url = "https://steamcommunity.com/id/darthun/"
 name = "youtube"
 url = "https://www.youtube.com/@julienl3957"
 
-[module]
-  [[module.imports]]
-    path = 'github.com/hugomods/images'
-    disable = false
+#[module]
+#  [[module.imports]]
+#    path = 'github.com/hugomods/images'
+#    disable = false
 
 
