--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://darthun.github.io/ULBlog/'
+baseURL = 'https://darthun.github.io/'
 languageCode = 'en-us'
 title = 'Operation Uniform Lima'
 theme = 'hugo-blog-awesome'
